add enum test type